Fix: fix logout issue

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-user me-2"></i>Profil</a></li>
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-cog me-2"></i>Paramètres</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item text-danger"  id="logout"><i class="fas fa-sign-out-alt me-2"></i>Déconnexion</a></li>
+                                    <li><a class="dropdown-item text-danger cursor-pointer" id="logout"><i class="fas fa-sign-out-alt me-2"></i>Déconnexion</a></li>
                             </ul>
                         </li>
                         }
